--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
+		<!-- require APlayer -->
+		<link rel="stylesheet" href="https://jsd.onmicrosoft.cn/gh/Daleveral/csslivb/cssv3.css">
+		<script src="https://jsd.onmicrosoft.cn/gh/Daleveral/csslivb/jsv2.js"></script>
+		<!-- require MetingJS -->
+		<script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
+		<meting-js
+		        id="13055527120"
+		        lrc-type="0"
+		        server="netease"
+		        order="list"
+		        type="playlist"
+		        fixed="true"
+		        list-olded="true">
+		</meting-js>
 		<!-- partial:index.partial.html -->
 		<!-- SVG Spritesheet -->
 		<div style="height: 0; width: 0; position: absolute; visibility: hidden">
